@@ -1,3 +1,6 @@
+16 Jan 2004 mipsator
+ * fixed parse_pc_file() to use pkgcell_init().
+
 14 Jan 2004 mipsator
  * imported cfgtool.c and cfgtool.h to store config tool related code.
  * updated func.c to use cfgtool new functions.
